examples/test/testpolicy7993.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7993
  namespace: namespace384
spec:
  podSelector:
    matchLabels:
      key44: value1
      key1: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value28
          key42: value45
          key25: value45
      podSelector:
        matchLabels:
          key15: value37
